WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283071
[WebGPU] Unused external textures result in struct size mismatches
https://bugs.webkit.org/show_bug.cgi?id=283071
Summary
[WebGPU] Unused external textures result in struct size mismatches
Mike Wyrzykowski
Reported
2024-11-13 11:58:36 PST
[WebGPU] Unused external textures result in struct size mismatches
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-11-13 11:58:54 PST
rdar://139732445
Mike Wyrzykowski
Comment 2
2024-11-13 12:33:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36605
EWS
Comment 3
2024-11-14 09:10:58 PST
Committed
286594@main
(32ff5579026f): <
https://commits.webkit.org/286594@main
> Reviewed commits have been landed. Closing PR #36605 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug