[WebGPU] Unused external textures result in struct size mismatches https://bugs.webkit.org/show_bug.cgi?id=283071 rdar://139732445

Reviewed by Tadeu Zagallo.

In order to be able to place an unused texture_external instance directly
inside a struct, we need to pack it to single byte alignment otherwise there
is a size mismatch compared to a used texture_external which has its members
placed inline within the AB.

* LayoutTests/fast/webgpu/nocrash/fuzz-283071-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-283071.html: Added.
Add regression test.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::emitNecessaryHelpers):

Canonical link: https://commits.webkit.org/286594@main